refactor: Update emission

--- a/integration/dummies/b/manifest.yaml
+++ b/integration/dummies/b/manifest.yaml
@@ -9,3 +9,8 @@ entity:
       length:
         maximum: 10
       description: string
+
+remotes: ['a.b', 'd.e']
+
+receivers:
+  dummies.a.happened: transit
