--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -4,7 +4,7 @@
   "description": "Kookaburra HTTP Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/kookaburra#readme",
-  "main": "src/factory.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/quantumducks/kookaburra.git"
