feat(runtime): Add operation forwarding
Close #56

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -14,3 +14,8 @@ operations:
     input: integer
     output: integer
     query: true
+  transfer:
+    input: id   # source balance
+    query: true # target balance
+  nullify:
+    output: integer
