feat: Add system property '_version'

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -10,6 +10,10 @@ entity:
   initialized: true
 
 operations:
+  transit:
+    input:
+      properties:
+        balance: ~
   deduce:
     input: integer
     output: integer
