feat: Add concurrency control 'retry'

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -18,6 +18,9 @@ operations:
     input: integer
     output: integer
     query: true
+  debit:
+    forward: deduce
+    concurrency: retry
   transfer:
     input: id   # source balance
     query: true # target balance
