style: Add minor code changes

--- a/integration/dummies/messages/manifest.yaml
+++ b/integration/dummies/messages/manifest.yaml
@@ -39,9 +39,7 @@ operations:
   change:
     forward: update
   find:
-    output:
-      properties:
-        messages: array
+    output: array
     query: true
   transit:
     input:
