feat: Add extensions

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -26,3 +26,8 @@ operations:
     query: true # target balance
   nullify:
     output: integer
+
+extensions:
+  resources:
+    /:id:
+      operations: [observe]
