--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "workspaces": [
     "runtime/*",
-    "connectors/*"
+    "connectors/*",
+    "extensions/*"
   ],
   "devDependencies": {
     "@babel/eslint-parser": "7.13.8",
@@ -14,6 +15,7 @@
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lerna": "3.22.1",
+    "node-fetch": "2.6.2",
     "randomstring": "1.1.5",
     "snazzy": "9.0.0",
     "standard": "16.0.3"
@@ -35,7 +37,8 @@
   "jest": {
     "roots": [
       "<rootDir>/runtime",
-      "<rootDir>/connectors"
+      "<rootDir>/connectors",
+      "<rootDir>/extensions"
     ],
     "testMatch": [
       "**/?(*.)+(test).js"
