--- a/runtime/prototype/package.json
+++ b/runtime/prototype/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toa.io/prototype",
   "version": "0.0.0",
-  "description": "Kookaburra Generic Prototype",
+  "description": "Toa Generic Prototype",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/toa#readme",
   "repository": {
