--- a/connectors/bindings.loop/package.json
+++ b/connectors/bindings.loop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toa.io/bindings.loop",
   "version": "0.0.0",
-  "description": "Kookaburra Loop Binding",
+  "description": "Toa Loop Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/toa#readme",
   "main": "src/index.js",
