--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toa.io/boot",
   "version": "0.0.0",
-  "description": "Kookaburra Boot",
+  "description": "Toa Boot",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/toa#readme",
   "main": "src/index.js",
