--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toa.io/cli",
   "version": "0.0.0",
-  "description": "Kookaburra CLI",
+  "description": "Toa CLI",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/toa#readme",
   "repository": {
