--- a/integration/dummies/a/manifest.yaml
+++ b/integration/dummies/a/manifest.yaml
@@ -6,4 +6,21 @@ entity:
     properties:
       title: string
       length: integer
-    required: [ title ]
+    required: [title]
+  initialized: true
+
+operations:
+  create:
+    forward: transit
+    query: false
+    input:
+      properties:
+        title: ~
+        length: ~
+
+extensions:
+  resources:
+    /:
+      operations: [create]
+    /:id:
+      operations: [observe]
