--- a/runtime/schema/package.json
+++ b/runtime/schema/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "description": "Toa schema validator",
   "author": "temich <tema.gurtovoy@gmail.com>",
-  "homepage": "https://github.com/quantumducks/toa#readme",
+  "homepage": "https://github.com/toa-io/toa#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quantumducks/toa.git"
+    "url": "git+https://github.com/toa-io/toa.git"
   },
   "bugs": {
-    "url": "https://github.com/quantumducks/toa/issues"
+    "url": "https://github.com/toa-io/toa/issues"
   },
   "main": "src/schema.js",
   "dependencies": {
