--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "scripts": {
     "dev": "docker compose up -d",
-    "test": "jest",
-    "integration": "jest --roots integration --runInBand",
+    "test": "standard --verbose | snazzy && yarn test:unit && yarn test:integration",
+    "test:unit": "jest --roots runtime connectors extensions",
+    "test:integration": "jest --roots integration --runInBand",
     "lint": "standard --verbose --fix | snazzy",
     "install": "./node_modules/.bin/lerna bootstrap --ignore-scripts",
     "prepare": "husky install"
@@ -38,7 +39,8 @@
     "roots": [
       "<rootDir>/runtime",
       "<rootDir>/connectors",
-      "<rootDir>/extensions"
+      "<rootDir>/extensions",
+      "<rootDir>/integration"
     ],
     "testMatch": [
       "**/?(*.)+(test).js"
