--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@babel/eslint-parser": "7.13.8",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-proposal-private-methods": "7.13.0",
+    "@commitlint/cli": "13.2.1",
+    "@commitlint/config-conventional": "13.2.0",
     "clone-deep": "4.0.1",
     "execa": "5.1.1",
     "husky": "5.0.9",
