--- a/integration/dummies/stats/manifest.yaml
+++ b/integration/dummies/stats/manifest.yaml
@@ -7,15 +7,18 @@ entity:
     messages:
       type: integer
       default: 0
+    bankrupt: boolean
 
 operations:
   update:
     concurrency: retry
     input:
       messages: boolean
+      bankrupt: boolean
 
 receivers:
   messages.messages.created: update
+  credits.balance.updated: update
 
 resources:
   /:id:
