feat(gears): add context.local, refactor context
close #74

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -28,6 +28,7 @@ operations:
   transfer:
     concurrency: none
     input: id   # source balance
+    output: integer
     query: true # target balance
   nullify:
     concurrency: retry
