feat(runtime): add assignment

--- a/integration/dummies/credits/manifest.yaml
+++ b/integration/dummies/credits/manifest.yaml
@@ -33,6 +33,10 @@ operations:
   nullify:
     concurrency: retry
     output: integer
+  set:
+    input:
+      balance: ~
+    forward: assign
 
 extensions:
   resources:
