feat(resources): add exact omit, limit support

--- a/integration/dummies/messages/manifest.yaml
+++ b/integration/dummies/messages/manifest.yaml
@@ -90,6 +90,10 @@ extensions:
         query:
           projection: [ text, sender, timestamp ]
         operations: [ add, find ]
+      /fixed/list:
+        query:
+          omit: 10
+          limit: 20
 
 
 
