fix(resources): fix open criteria constraint

--- a/extensions/resources/src/manifest/schema.yaml
+++ b/extensions/resources/src/manifest/schema.yaml
@@ -13,6 +13,7 @@ definitions:
           criteria:
             nullable: true
             type: string
+            minLength: 1
           sort:
             type: array
             uniqueItems: true
