--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@toa.io/bridges.javascript.native",
+  "name": "@toa.io/bridges.node",
   "version": "0.0.0",
-  "description": "Toa Native (inproc) javascript Bridge",
-  "author": "temich <tema.gurtovoy@gmail.com>",
-  "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "description": "Toa Node Bridge (inproc)",
+  "homepage": "https://toa.io",
+  "author": {
+    "name": "Artem Gurtovoi",
+    "url": "https://github.com/temich"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
@@ -12,9 +15,13 @@
   "bugs": {
     "url": "https://github.com/toa-io/toa/issues"
   },
+  "engines": {
+    "node": ">= 12.0.0"
+  },
   "publishConfig": {
     "access": "public"
   },
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
