--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -19,19 +19,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "mongodb": "^4.1.0"
+    "mongodb": "4.1.3"
   },
   "peerDependencies": {
     "@toa.io/gears": "^0.0.0",
     "@toa.io/core": "^0.0.0"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "7.13.8",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-private-methods": "7.13.0",
-    "husky": "5.1.3",
-    "jest": "26.6.3",
-    "snazzy": "9.0.0",
-    "standard": "16.0.3"
   }
 }
