--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-16-bullseye
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends iputils-ping
+  && apt-get -y install --no-install-recommends iputils-ping gnupg2
