--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,3 +2,5 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-16-bullseye
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
   && apt-get -y install --no-install-recommends iputils-ping gnupg2
+
+WORKDIR /workspace
