--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -14,6 +14,6 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ..:/workspace:delegated
+      - ../:/workspace:delegated
     working_dir: /workspace
     command: /bin/sh -c "while sleep 1000; do :; done"
