chore: keep trying to fix the container

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -14,6 +14,5 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ../:/workspace:delegated
-    working_dir: /workspace
+      - ..:/workspace:delegated
     command: /bin/sh -c "while sleep 1000; do :; done"
