--- a/connectors/bindings.http/package.json
+++ b/connectors/bindings.http/package.json
@@ -26,5 +26,8 @@
     "agentkeepalive": "4.1.4",
     "express": "4.17.1",
     "node-fetch": "2.6.6"
+  },
+  "devDependencies": {
+    "@babel/parser": "^7.16.2"
   }
 }
