--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/storages.mongodb",
-  "version": "0.0.0",
+  "version": "0.1.0-dev.0",
   "description": "Toa MongoDB Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -22,7 +22,7 @@
     "mongodb": "4.1.4"
   },
   "peerDependencies": {
-    "@toa.io/gears": "^0.0.0",
-    "@toa.io/core": "^0.0.0"
+    "@toa.io/core": "^0.0.0",
+    "@toa.io/gears": "^0.0.0"
   }
 }
