--- a/extensions/resources/package.json
+++ b/extensions/resources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.resources",
-  "version": "0.0.0",
+  "version": "0.1.0-dev.0",
   "description": "Toa Resources Extension",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,10 +20,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
+    "@toa.io/bindings.amqp": "^0.0.0",
     "@toa.io/boot": "^0.0.0",
     "@toa.io/core": "^0.0.0",
     "@toa.io/gears": "^0.0.0",
-    "@toa.io/bindings.amqp": "^0.0.0",
     "@toa.io/schema": "^0.0.0"
   },
   "dependencies": {
