--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/core",
-  "version": "0.0.0",
+  "version": "0.1.0-dev.0",
   "description": "Toa Core",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,9 +19,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/gears": "^0.0.0",
-    "@toa.io/schema": "^0.0.0",
     "@rsql/parser": "1.2.4",
+    "@toa.io/gears": "^0.1.0-dev.0",
+    "@toa.io/schema": "^0.1.0-dev.0",
     "clone-deep": "4.0.1"
   },
   "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
