--- a/runtime/gears/package.json
+++ b/runtime/gears/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/gears",
-  "version": "0.0.0",
+  "version": "0.1.0-dev.0",
   "description": "Toa Gears",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
