chore: add GitHub workflow

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,12 @@
 {
+  "command": {
+    "version": {
+      "allowBranch": ["main", "dev"],
+      "conventionalCommits": true,
+      "exact": true,
+      "message": "chore(release): %s"
+    }
+  },
   "useWorkspaces": true,
-  "version": "0.1.0-dev.0"
+  "version": "0.1.0-dev.0",
 }
