--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,11 @@
 name: Publish
 
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - main
-      - dev
+#  pull_request:
+#    types: [closed]
+#    branches:
+#      - main
+#      - dev
   push:
     branches:
       - main
@@ -13,7 +13,7 @@ on:
 
 jobs:
   publish:
-    if: github.event.pull_request.merged == true
+#    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -38,7 +38,7 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
   
-          if [ ${{ github.base_ref }} = development ]; then
+          if [ ${{ github.base_ref }} = dev ]; then
             npx lerna publish --conventional-prerelease --preid dev --yes
           else
             npx lerna publish --conventional-graduate --yes
