--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,8 +40,8 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           npm whoami
           
-          if [ ${{ github.base_ref }} = main ]; then
-            npx lerna publish --conventional-graduate --yes
+          if [ ${{ github.ref }} = main ]; then
+            npx lerna publish --no-verify-access --conventional-graduate --yes
           else
-            npx lerna publish --conventional-prerelease --preid dev --yes
+            npx lerna publish --no-verify-access --conventional-prerelease --preid dev --yes
           fi
