--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,18 +1,16 @@
 name: Publish
 
 on:
-#  pull_request:
-#    types: [closed]
-#    branches:
-#      - main
-#      - dev
-  push:
+  pull_request:
+    types: [closed]
     branches:
+      - main
+      - dev
       - fix/workflow
 
 jobs:
   publish:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -40,8 +38,8 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           npm whoami
           
-          if [ ${{ github.ref }} = main ]; then
+          if [ ${{ github.base_ref }} = main ]; then
             npx lerna publish --no-verify-access --conventional-graduate --yes
           else
-            npx lerna publish --no-verify-access --conventional-prerelease --preid dev --yes
+            npx lerna publish --no-verify-access --conventional-prerelease --preid dev --no-changelog --yes
           fi
